# alibaba-hackathon

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  rprod.sh  run.dev.sh
py_app_service/: app.py  config.docker.py  config.py.example
py_app_service/database/: __init__.py  mongo.py
py_app_service/experiments/: trying_playground.ipynb  trying_playground1.ipynb
py_app_service/models/: __init__.py
py_app_service/services/: __init__.py  chatbot.py  prompting.py
py_app_service/workers/: __init__.py  prompting_worker.py
